--- a/themes/ingenioart/css/master.sass
+++ b/themes/ingenioart/css/master.sass
@@ -99,9 +99,11 @@ body,html
 //Boton ver más [ Click aquí ]
 .btn__show-more 
 	background: $ingenioart_blue
+	border    : none 
 	color     : white
 	display   : inline-block 
 	font-size : 14px 
+	outline   : none 
 	padding   : 10px 23px 
 	+border-radius( 5px )
 	+transition( all 400ms cubic-bezier(.21,.84,.45,.96) )
@@ -388,7 +390,7 @@ body,html
 		height    : 326px
 		padding   : 26px 40px
 		position  : relative
-		width     : 23.5%
+		//width     : 23.5%
 		word-break: break-word
 		//Imagen
 		figure
