--- a/themes/ingenioart/css/master.sass
+++ b/themes/ingenioart/css/master.sass
@@ -144,7 +144,22 @@ body,html
 	a 
 		text-decoration: none
 
+/******* BOTÓN HACIA ARRIBA *************/
 
+#arrow-up-page
+	background: rgba(0,0,0,.7)
+	color     : white
+	display   : none 
+	font-size : 18px
+	padding   : 6px 13px
+	position  : fixed
+	right     : 3%
+	top       : 90%
+	z-index   : 999999
+	+transition( all 500ms ease )
+	/* Hover */
+	&:hover 
+		background: $ingenioart_orange
 
 /***************************************************************************************/
 /**-------------------- SECCIONES - PAGINAS EN COMUN  --------------------------------**/
@@ -908,12 +923,14 @@ body,html
 
 //Contenedor Artículos
 .pageMedia__multimedia__content 
+	align-items    : baseline 
 	justify-content: space-between
 //Artículos
 .multimedia__item
 	color      : black 
 	font-family: "Bebas"
 	margin     : 0 auto 20px
+	min-height : 369px
 	width      : 32.5%
 
 	//Iframe - videos
