--- a/themes/ingenioart/css/master.sass
+++ b/themes/ingenioart/css/master.sass
@@ -543,7 +543,8 @@ body,html
 	margin: 47px auto 0
 	//Articulos / items 
 	.item-proyecto
-		width: 33.33%
+		margin: 5px 
+		width : 32.5%
 		//Imagen
 		figure 
 			margin: 0 auto
