actualizar estilos pagina nosotrod

--- a/themes/ingenioart/css/master.sass
+++ b/themes/ingenioart/css/master.sass
@@ -711,9 +711,11 @@ body,html
 	padding    : 55px 0 70px 
 //Contenedor team
 .pageNosotros__team__content
-	margin: 30px auto 0
+	align-content: center
+	margin       : 30px auto 0
 	//artículo
 	.item-team
+		margin  : 0 0 15px 
 		overflow: hidden
 		width   : 25%
 		//Imagen
