--- a/themes/ingenioart/css/master.sass
+++ b/themes/ingenioart/css/master.sass
@@ -34,8 +34,9 @@ $ingenioart_turquesa   : #A9EBF0
 /***************************************************************************************/
 
 body,html
-	font-size: 16px
-	width    : 100% 
+	font-family: "Arial" , sans-serif 
+	font-size  : 16px
+	width      : 100% 
 
 /***************************************************************************************/
 /**-------------------------- KEYFRAMES  ---------------------------------------------**/
