actualizar mobile hasta single servicios

--- a/themes/ingenioart/css/master.sass
+++ b/themes/ingenioart/css/master.sass
@@ -278,7 +278,11 @@ body,html
 
 		//Icono
 		i 
-			color: black
+			color         : black
+			display       : inline-block
+			font-size     : 20px
+			vertical-align: bottom
+			width         : 20px 
 
 //Navegación Principal
 .mainNav
