--- a/themes/ingenioart/css/master.sass
+++ b/themes/ingenioart/css/master.sass
@@ -1042,8 +1042,9 @@ body,html
 			textarea
 				height    : 180px
 				max-height: 180px
+				max-width : 320px
 				padding   : 5px 10px
-				width     : 320px
+				width     : 100%
 
 
 //Seccion Categorías
