actualizacion blog social

--- a/themes/ingenioart/css/master.sass
+++ b/themes/ingenioart/css/master.sass
@@ -953,7 +953,7 @@ body,html
 	a 
 		color          : gray 
 		display        : inline-block
-		margin         : 0 12px 
+		margin         : 0 12px 0 0
 		text-decoration: none
 		+transition( all 500ms ease )
 		//Hover 
@@ -986,14 +986,17 @@ body,html
 		font-family: "Bebas"
 		margin     : 40px auto 
 		h3 
-			color         : $ingenioart_blue
+			color         : $ingenioart_orange 
 			display       : inline-block
-			margin        : 0 auto 
+			font-size     : 35px
+			margin        : 0 20px 0 0 
 			vertical-align: middle
+
 		//Sobreescribir compartir links
 		.multimedia__item__share
-			display  : inline-block
-			font-size: 18px 
+			display       : inline-block
+			font-size     : 18px 
+			vertical-align: middle 
 	
 	//Sección Comentarios
 	.item-blog__comments-area
